@@ -21,5 +21,4 @@ t3lib_extMgm::addPItoST43($_EXTKEY, 'pi4/class.tx_jhedamextender_pi4.php', '_pi4
 
 $TYPO3_CONF_VARS['FE']['eID_include']['downloadSpecialUsage'] = 'EXT:jhe_dam_extender/ajax/class.ajax_downloadSpecialUsage.php';
 $TYPO3_CONF_VARS['FE']['eID_include']['getDocumentsByDirectoryAndCategory'] = 'EXT:jhe_dam_extender/ajax/class.ajax_getDocumentsByDirectoryAndCategory.php';
-$TYPO3_CONF_VARS['FE']['eID_include']['fancybox'] = 'EXT:jhe_dam_extender/ajax/class.ajax_fancybox.php';
 ?>
