@@ -275,10 +275,10 @@ class tx_jhedamextender_pi4 extends tslib_pibase {
 		$this->addJqueryLibrary();
 		
 		$GLOBALS['TSFE']->additionalHeaderData[$this->extKey] = '
-			<script type="text/javascript" src="typo3conf/ext/jq_fancybox/fancybox/js/jquery.easing-1.3.pack.js?' . time() .'"></script>
-			<script type="text/javascript" src="typo3conf/ext/jq_fancybox/fancybox/js/jquery.fancybox-1.3.1.pack.js?' . time() .'"></script>
+			<!--<script type="text/javascript" src="typo3conf/ext/jq_fancybox/fancybox/js/jquery.easing-1.3.pack.js?' . time() .'"></script>-->
+			<!--<script type="text/javascript" src="typo3conf/ext/jq_fancybox/fancybox/js/jquery.fancybox-1.3.1.pack.js?' . time() .'"></script>-->
 			<script type="text/javascript" src="typo3conf/ext/jhe_dam_extender/res/js/jquery.pajinate.js?' . time() .'"></script>
-			<link rel="stylesheet" href="typo3conf/ext/jq_fancybox/fancybox/css/jquery.fancybox.css?' . time() .'" type="text/css">
+			<!--<link rel="stylesheet" href="typo3conf/ext/jq_fancybox/fancybox/css/jquery.fancybox.css?' . time() .'" type="text/css">-->
 
             <script type="text/javascript">
                 $(document).ready(function() {
@@ -316,7 +316,7 @@ class tx_jhedamextender_pi4 extends tslib_pibase {
 						});
 					});
 
-					$("img.jqfancybox").live("click", function(){
+					/*$(document).on("click", "img.jqfancybox", function(){
 						alert(this.id);
 						$.ajax({
 							url: "?eID=fancybox",
@@ -345,7 +345,7 @@ class tx_jhedamextender_pi4 extends tslib_pibase {
 								});
 							}
 						});
-					});
+					});*/
 				});
 			</script>
 		';
